--- a/angular.json
+++ b/angular.json
@@ -147,7 +147,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "cae08f34-f772-45ca-b0e1-7c491dae0797"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
